lustre/mdt/mdt_coordinator.c
@@ -621,7 +621,7 @@ out:
  * \retval cdt_restore_handle found
  * \retval NULL not found
  */
-static struct cdt_restore_handle *hsm_restore_hdl_find(struct coordinator *cdt,
+struct cdt_restore_handle *mdt_hsm_restore_hdl_find(struct coordinator *cdt,
 						       const struct lu_fid *fid)
 {
 	struct cdt_restore_handle	*crh;
@@ -681,6 +681,17 @@ static int hsm_restore_cb(const struct lu_env *env,
 		RETURN(0);
 
 	/* restore request not in a final state */
+
+	/* force replay of restore requests left in started state from previous
+	 * CDT context, to be canceled later if finally found to be incompatible
+	 * when being re-started */
+	if (larr->arr_status == ARS_STARTED) {
+		larr->arr_status = ARS_WAITING;
+		larr->arr_req_change = cfs_time_current_sec();
+		rc = llog_write(env, llh, hdr, hdr->lrh_index);
+		if (rc != 0)
+			GOTO(out, rc);
+	}
 
 	OBD_SLAB_ALLOC_PTR(crh, mdt_hsm_cdt_kmem);
 	if (crh == NULL)
@@ -1335,7 +1346,7 @@ unlock:
 
 		/* give back layout lock */
 		mutex_lock(&cdt->cdt_restore_lock);
-		crh = hsm_restore_hdl_find(cdt, &car->car_hai->hai_fid);
+		crh = mdt_hsm_restore_hdl_find(cdt, &car->car_hai->hai_fid);
 		if (crh != NULL)
 			list_del(&crh->crh_list);
 		mutex_unlock(&cdt->cdt_restore_lock);
